# Brain

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml  requirements.txt  test.py  zvj4b0jz.component-detection-pip-report.json
agents/goal/: goal.yml  goal_prompt.md
agents/gui/: gui_agent.yml  gui_prompt.md
agents/orchestrator/: orchestrator_agent.yml  orchestrator_prompt.md
agents/planner/: planner_agent.yml
assistants/: goal_agent.py  learning_assistant.json  screen_agent.py  test_assistant.json
brain-agent/: pyproject.toml
brain-agent/src/brain_agent/: __init__.py
context_history/: history_provider.py
interactions/goals/: history.json
interactions/sessions/session_20260327_193814/: history.json
prompts/: character_set.csv  click_consequence.txt  find_cursor.txt  find_goal.txt  screen_analyze.md
response_formats/: goal_response.py
src/brain/: __main__.py
src/brain/agents/: __init__.py  goal_agent.py  gui_agent.py  screen_agent.py
src/brain/context_history/: __init__.py  history_provider.py
src/brain/prompts/: goal_prompt.md  gui_prompt.md  screen_analyze.md
src/brain/tools/: __init__.py  create_file.py  cursor_actions.py  keyboard_actions.py  screenshot.py
tests/: experiments.ipynb  test.py  try.py
tools/: cursor_actions.py  gui_user_input.py  screenshot.py
