[project]
name = "brain"
version = "0.1.0"
description = "An amateur CUA implementation."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pillow",
    "pydantic",
    "python-dotenv",
    "azure-ai-projects",
    "azure-identity",
    "agent_framework",
    "tinydb",
    "customtkinter",
    "pyautogui",
]

[project.scripts]
brain = "brain.__main__:main"   # makes `brain` a CLI command

[build-system]
requires = ["hatchling"]        # or "flit-core", "setuptools"
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

# Include .md prompt files as package data
[tool.hatch.build.targets.wheel.force-include]
"src/brain/prompts" = "brain/prompts"