[project]
name = "brain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nisarg", email = "ngs1112002@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
brain-agent = "brain_agent:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
